fixing footer alignment

--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -762,7 +762,13 @@ footer{
     display: block;
   }
 }
-
+.footer-nav.working{
+  margin-right: 0;
+  float: right;
+}
+.footer-nav.news{
+  margin-left: $gutter;
+}
 // 🎌 FOOTER: BOTTOM 🎌
 
 .footer-bottom{
